simplify code